syntax = "proto3";

option csharp_namespace = "gRPCServer.Protos";


service Calcaulator
{
rpc Sum(.SumRequest) returns (.SumResponse) ;
}

message SumRequest{
	int32 firstNumber=1;
	int32 secondNumber=2;
}

message SumResponse{
	int32 sum=1;
}